Fixed bug #29104 (Function declaration in method doesn't work)